# faceRecognizer_Doorlock

./: .gitignore  CMakeLists.txt  README.md
assert/: face_model.yml  labels.txt
assert/db/: auth_logs.csv  doorlock.db  doorlock.db-shm  doorlock.db-wal
assert/embedding/: embeddings.json
assert/models/face/: inspect_onnx.py  (+1 more)
faceDoorLock_backup/: Dd_ultrasonic.cpp  Fd_ultrasonic.cpp  Fd_ultrasonic.hpp  MainWindow.cpp_cp  MainWindow.cpp_cp_20250628  MainWindow.hpp_20250628  MainWindow.ui_cp  faceRecognizerWorker.cpp  faceRecognizerWorker.hpp  faceRecognizerWorker.hpp_20250619  face_recognizer.cpp  face_recognizer.hpp  main.cpp  servo_control.cpp  ultrasonic_test  ultrasonic_test.cpp  utils.cpp  utils.hpp
faceDoorLock_backup/test_code/: DD_ultrasonic.cpp  DD_ultrasonic.hpp  FD_ultrasonic.cpp  MainWindow.cpp  MainWindow.hpp  common.hpp  faceRecognizerWorker.cpp  faceRecognizerWorker.hpp  main.cpp  util.cpp  util.hpp
src/: DeviceStatus.hpp  faceRecognitionState.hpp  main.cpp  tags  util.hpp
src/ai/: Embedder.cpp  Embedder.hpp
src/ble/: '  AuthLogRepo.h  BleServer.cpp  BleServer.hpp  BleUuid.cpp
src/capture/: '  FrameCapture.cpp  FrameCapture.hpp
src/detect/: FaceDetector.cpp  FaceDetector.hpp  LandmarkAligner.cpp  LandmarkAligner.hpp
src/fsm/: fsm_logging.cpp  fsm_logging.hpp  recognition_fsm.cpp  recognition_fsm.hpp  recognition_fsm_setup.hpp  recognition_states.hpp  tags
src/gui/: '  BasicInfoWidget.cpp  BasicInfoWidget.hpp  ControlTabView.cpp  ControlTabView.hpp  CpuInfoWidget.cpp  CpuInfoWidget.hpp  DevInfoDialog.cpp  DevInfoDialog.hpp  DevInfoTab.cpp  DevInfoTab.hpp  DoorIconLabel.hpp  DoorIconLabel.hpp_back  LedWidget.cpp  LedWidget.h  LogTab.cpp  LogTab.hpp  MainWindow.cpp  MainWindow.hpp  MemInfoWidget.cpp  MemInfoWidget.hpp  NetworkInfoWidget.cpp  NetworkInfoWidget.hpp  SingleLogDialog.cpp  SingleLogDialog.hpp  StyledMsgBox.cpp  StyledMsgBox.hpp  styleConstants.hpp
src/hw/: DoorlockController.cpp  DoorlockController.hpp  ReedSensor.cpp  ReedSensor.hpp  UltrasonicSensor.cpp  UltrasonicSensor.hpp  UltrasonicSensor_back.cpp  UltrasonicSensor_back.hpp  UnlockUntilReed.cpp  UnlockUntilReed.hpp
src/include/: '  LogDtos.hpp  common_path.hpp  recog_params.hpp  states.hpp  types.hpp
src/lbph/: Cascader.cpp  Cascader.hpp
src/liveness/: LivenessGate.cpp  LivenessGate.hpp
src/log/: SystemLogTypes.hpp  SystemLogger.cpp  SystemLogger.hpp  logger.cpp  logger.hpp
src/match/: FaceMatcher.cpp  FaceMatcher.hpp  SimilarityDecision.cpp  SimilarityDecision.hpp
src/presenter/: .FaceRecognitionPresenter.cpp.swp  DoorSensorPresenter.cpp  DoorSensorPresenter.hpp  FaceRecognitionPresenter.cpp  FaceRecognitionPresenter.hpp  FaceRegisterPresenter.cpp  FaceRegisterPresenter.hpp  FaceSensorPresenter.cpp  FaceSensorPresenter.hpp  MainPresenter.cpp  MainPresenter.hpp  UserImagePresenter.cpp  UserImagePresenter.hpp
src/services/: .FaceRecognitionService.cpp.swp  AuthManager.cpp  AuthManager.hpp  DoorSensorService.cpp  DoorSensorService.hpp  FaceRecognitionService.cpp  FaceRecognitionService.cpp_back  FaceRecognitionService.cpp_match2  FaceRecognitionService.hpp  FaceSensorService.cpp  FaceSensorService.hpp  QSqliteService.cpp  QSqliteService.hpp  SqlCommon.hpp  UserImageService.cpp  UserImageService.hpp  ]
src/util/: textDrawUtil.cpp  textDrawUtil.hpp
ui/: MainWindow.ui  MainWindow.ui_20250622  MainWindow.ui_bk  MainWindow.ui_first
(+1 files in other folders)
